# ai-email-assist

./: README.md
ai-processor/: .envrc  Dockerfile  pyproject.toml
ai-processor/src/ai_processor/: __init__.py  main.py  settings.py
ai-processor/src/ai_processor/clients/: http_client.py
ai-processor/src/ai_processor/databases/: __init__.py  mongo.py
ai-processor/src/ai_processor/schemas/: email.py
ai-processor/src/ai_processor/services/: nlp.py  openai.py  queue.py
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/src/backend/: __init__.py  main.py  settings.py
backend/src/backend/databases/: __init__.py  mongo.py
backend/src/backend/middlewares/: logger.py
backend/src/backend/routes/: email.py
backend/src/backend/schemas/: email.py
backend/src/backend/services/: queue.py
backend/src/backend/utils/: deps.py
