[project]
name = "backend"
version = "0.1.0"
description = "The ai-email-assist project's backend."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.7",
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.14.1",
    "structlog>=25.4.0",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
]

[tool.uv]
package = true

[dependency-groups]
dev = ["pip-audit>=2.9.0", "ruff>=0.12.11"]
